[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/DiceRoll.gd" type="Script" id=1]
[ext_resource path="res://Fonts/BradBunR.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Chocolate Bar Demo.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.556863, 0.305882, 0.305882, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.541176, 1, 0.196078 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 5

[sub_resource type="DynamicFont" id=7]
size = 58
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.541176, 1, 0.156863 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 5

[sub_resource type="DynamicFont" id=9]
size = 34
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 2 )

[node name="DiceRoll" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -216.0
margin_right = 128.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -211.0
margin_right = 128.0
margin_bottom = -14.0
color = Color( 0, 0.541176, 1, 0.168627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Container"]
margin_left = 8.0
margin_top = 11.0
margin_right = 8.0
margin_bottom = 11.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/ColorRect"]
margin_right = 56.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Container"]
margin_left = 72.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 8.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/ColorRect2"]
margin_right = 48.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Container"]
margin_left = 136.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 8.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/ColorRect3"]
margin_right = 48.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Container"]
margin_left = 200.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 8.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/ColorRect4"]
margin_right = 48.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -152.0
margin_right = 120.0
margin_bottom = -24.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
margin_right = 240.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 7 )
text = "BACI
KOCKICE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 3.0
anchor_top = 1.0
anchor_right = 3.0
anchor_bottom = 1.0
margin_left = -344.0
margin_top = -136.0
margin_right = -33.0
margin_bottom = -31.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Trenutno na potezu:
IGRAC NIJE ODABRAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundFXPlayer2" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
